# FileEncryptor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install-linux.sh  install-mac.sh  install-windows.bat
src/: aes_cipher.cpp  aes_cipher.h  file_handler.cpp  file_handler.h  main.cpp  utils.cpp  utils.h  xor_cipher.cpp  xor_cipher.h
